Early studiomdl (*.smd) model format support.
Loads and displays static reference models with a single texture only.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1163,6 +1163,7 @@ set (PCH_SOURCES
 	r_data/models/models_voxel.cpp
 	r_data/models/models_ue1.cpp
 	r_data/models/models_obj.cpp
+	r_data/models/models_smd.cpp
 	scripting/symbols.cpp
 	scripting/vmiterators.cpp
 	scripting/vmthunks.cpp
