Added mesh animation system. Almost working! Almost..

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1164,6 +1164,7 @@ set (PCH_SOURCES
 	r_data/models/models_ue1.cpp
 	r_data/models/models_obj.cpp
 	r_data/models/models_smd.cpp
+	r_data/models/anims_smd.cpp
 	scripting/symbols.cpp
 	scripting/vmiterators.cpp
 	scripting/vmthunks.cpp
